--- a/src/app/Bio/Bio.module.scss
+++ b/src/app/Bio/Bio.module.scss
@@ -4,8 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-   // padding: 0rem 7.125rem;
-    //background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
     z-index: 1;
     color: $dark-blue;
     font-family: $font-family-base;
@@ -15,12 +13,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        //max-width: 1200px;
         width: 100%;
-        margin: 0 auto;
+        margin: 8rem auto;
         padding: 2rem 7.125rem;
-       background-color: #fff;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         border-radius: 8px;
         margin-bottom: 2rem;
     }
@@ -28,28 +25,30 @@
     .section {
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
         margin-bottom: 2rem;
-
+        scroll-margin-top: 80px;
         &:nth-child(even) {
             flex-direction: row-reverse; /* Image on right for even sections */
         }
 
         .imageSection {
-            flex: 1;
+           background-color: rgba(3, 112, 255, 0.9);
+           margin-right: 20%;
             text-align: center;
-
             .profileImage {
+                flex: 1;
                 width: 100%;
-                max-width: 250px;
-                border-radius: 50%;
+                max-width: 400px;
+                border-radius: 4px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                padding-left: 2rem;
             }
         }
 
         .textSection {
             flex: 2;
-            padding-left: 2rem;
+           // padding-left: 2rem;
             padding-right: 2rem;
             text-align: left;
 
@@ -116,7 +115,7 @@
     align-items: center;
     justify-content: flex-start;
     height: 60vh;
-    width:100%;
+    width: 100%;
     margin: 0rem -7.125rem;
     color: white;
     padding: 2rem;
@@ -141,10 +140,12 @@
     }
 
     .content {
+        
+        background: rgba(3, 112, 255, 0.9);
         z-index: 2;
-        text-align: left;
-        width:100%;
-       // max-width: 600px;
+        text-align: center;
+        width: 60%;
+        margin-top: 35%;
 
         h1 {
             font-size: 2.5rem;
@@ -157,6 +158,25 @@
             font-size: 1.2rem;
             color: #dddfe8;
         }
+
+        .heroNavLinks {
+          display: flex;
+          gap: 2rem;
+          list-style: none;
+          margin-top: 1.5rem;
+
+          li {
+            a {
+              text-decoration: none;
+              color: white; /* Light color for links */
+              font-size: 16px;
+              transition: color 0.3s ease, transform 0.3s ease;
+
+              &:hover {
+                color: rgb(170, 180, 193); /* Blue on hover */
+              }
+            }
+          }
+        }
     }
 }
-
