--- a/src/app/carousels/Bio/Bio.module.scss
+++ b/src/app/carousels/Bio/Bio.module.scss
@@ -29,7 +29,46 @@
             padding: 1rem 1.5rem;
           }
     }
-
+    .headerSection {
+      text-align: center;
+      margin-bottom: 2rem;
+      
+      h1 {
+        font-size: 2.5rem;
+        color: $primary-blue;
+        font-weight: $font-weight-bold;
+        margin-bottom: 1rem;
+      }
+  
+      .title, .institution {
+        font-size: 1.2rem;
+        color: $dark-blue;
+        margin-bottom: 0.5rem;
+      }
+      .specialties {
+        font-size: 1.2rem;
+        color: $dark-blue;
+        margin-top: 1rem;
+    
+        strong {
+          font-weight: $font-weight-bold;
+          color: $primary-blue;
+        }
+      }
+      div {
+        font-size: 1.5rem;
+        color: $primary-blue;
+        margin-top: 1rem;
+  
+        a {
+          color: $hover-blue;
+          text-decoration: underline;
+          &:hover {
+            color: $dark-blue;
+          }
+        }
+      }
+    }
     .section {
         display: flex;
         flex-direction: row;
