--- a/src/app/carousels/Bio/Bio.module.scss
+++ b/src/app/carousels/Bio/Bio.module.scss
@@ -31,25 +31,45 @@
     }
     .headerSection {
       text-align: center;
+      padding: 2rem;
       margin-bottom: 2rem;
-      
+      @media (max-width: 600px) {
+        padding: 0.3rem;
+      }
       h1 {
         font-size: 2.5rem;
         color: $primary-blue;
         font-weight: $font-weight-bold;
         margin-bottom: 1rem;
+        @media (max-width: 900px) {
+          font-size: 2rem;
+        }
+        @media (max-width: 768px) {
+          font-size:2rem;
+        }
+        @media (max-width: 600px) {
+          margin-bottom: 0.6rem;
+          font-size:1.5rem;
+        }
       }
   
       .title, .institution {
         font-size: 1.2rem;
         color: $dark-blue;
         margin-bottom: 0.5rem;
+        @media (max-width: 600px) {
+          margin-bottom: 0.6rem;
+          font-size:1rem;
+        }
       }
       .specialties {
         font-size: 1.2rem;
         color: $dark-blue;
         margin-top: 1rem;
-    
+        @media (max-width: 600px) {
+          margin-bottom: 0.6rem;
+          font-size:1rem;
+        }
         strong {
           font-weight: $font-weight-bold;
           color: $primary-blue;
@@ -59,7 +79,9 @@
         font-size: 1.5rem;
         color: $primary-blue;
         margin-top: 1rem;
-  
+        @media (max-width: 600px) {
+          font-size:1rem;
+        }
         a {
           color: $hover-blue;
           text-decoration: underline;
@@ -180,7 +202,6 @@
     justify-content: center;
     height: 28rem;
     width: 100%;
-   // margin: 0rem -7.125rem;
     color: white;
     padding: 2rem;
     background-size: cover;
@@ -231,7 +252,6 @@
                 font-size: 1.5rem;
          }
         }
-
         p {
             font-size: 1.5rem;
             color: #dddfe8;
@@ -248,8 +268,6 @@
           margin-top: 1.5rem;
           align-items: center;
             justify-content: center;
-         
-
           li {
             a {
               text-decoration: none;
