--- a/src/app/carousels/Bio/Bio.module.scss
+++ b/src/app/carousels/Bio/Bio.module.scss
@@ -33,6 +33,10 @@
       text-align: center;
       padding: 2rem;
       margin-bottom: 2rem;
+      width:70%;
+      @media (max-width: 900px) {
+        width:100%;
+      }
       @media (max-width: 600px) {
         padding: 0.3rem;
       }
