--- a/src/app/carousels/Bio/Bio.module.scss
+++ b/src/app/carousels/Bio/Bio.module.scss
@@ -67,7 +67,7 @@
         }
       }
       .specialties {
-        font-size: 1.2rem;
+        font-size: 2rem;
         color: $dark-blue;
         margin-top: 1rem;
         @media (max-width: 600px) {
@@ -78,6 +78,35 @@
           font-weight: $font-weight-bold;
           color: $primary-blue;
         }
+        .specialtiesGrid {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+          gap: 15px;
+          padding: 20px;
+          background-color: $light-blue;
+          border-radius: 8px;
+          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        
+          div {
+            font-size: 1.1rem;
+            color: $dark-blue;
+            text-align: left;
+            padding: 5px 8px;
+            background-color: #ffffff;
+            border-radius: 6px;
+            border: 1px solid $border-blue;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        
+            &:hover {
+              transform: translateY(-5px);
+              box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+              background-color: $hover-blue;
+              color: #ffffff;
+            }
+          }
+        }
+        
       }
       div {
         font-size: 1.5rem;
@@ -102,7 +131,7 @@
         margin-bottom: 2rem;
         scroll-margin-top: 80px;
         &:nth-child(even) {
-            flex-direction: row-reverse; /* Image on right for even sections */
+            flex-direction: row; /* Image on right for even sections */
         }
         @media (max-width: 900px) {
             flex-direction: column-reverse;
@@ -126,11 +155,41 @@
                 margin-bottom:1rem;
               }
         }
+        .pledgeList {
+          padding-left: 20px;
+          list-style-type: decimal;
+          font-size: 1.2rem;
+          line-height: 1.6;
+          color: $dark-blue;
+        
+          li {
+            margin-bottom: 10px;
+          }
+        }
+        
 
+        .biographyList {
+          padding-left: 20px;
+          list-style-type: disc;
+          font-size: 1.2rem;
+          line-height: 1.8;
+          color: $dark-blue
+          li {
+            margin-bottom: 10px;
+          }
+        }.List {
+          padding-left: 20px;
+          list-style-type: disc;
+          font-size: 1.2rem;
+          line-height: 1.8;
+          color: $dark-blue
+          li {
+            margin-bottom: 10px;
+          }
+        }
+        
         .textSection {
-            flex: 2;
-           // padding-left: 2rem;
-            //padding-right: 2rem;
+            flex: 1;
             text-align: left;
             @media (max-width: 900px) {
                 text-align: center;
@@ -195,97 +254,6 @@
                 color: $primary-blue;
                 font-weight: $font-weight-medium;
             }
-        }
-    }
-}
-
-.heroSection {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 28rem;
-    width: 100%;
-    color: white;
-    padding: 2rem;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: $primary-blue;
-    border-radius: 8px;
-    margin-bottom: 2rem;
-
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to right, rgba(3, 112, 255, 0.9), rgba(3, 112, 255, 0.7) 30%, rgba(3, 112, 255, 0.3) 70%, rgba(3, 112, 255, 0.1));
-        z-index: 1;
-        pointer-events: none;
-        border-radius: 8px;
-    }
-
-    .content_section {
-        position: absolute;
-        background: rgba(3, 112, 255, 1);
-        padding: 20px;
-        border-radius: 8px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        z-index: 2;
-        text-align: center;
-        width: 50%;
-        margin-top: 30rem;
-        @media (max-width: 1024px) {
-            width:90%;
-     }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: white;
-            font-weight: 700;
-            @media (max-width: 900px) {
-                font-size: 2rem;
-         }
-            @media (max-width: 600px) {
-                font-size: 1.5rem;
-         }
-        }
-        p {
-            font-size: 1.5rem;
-            color: #dddfe8;
-            @media (max-width: 900px) {
-                font-size: 1.2rem;
-         }
-        }
-
-        .heroNavLinks {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 2rem;
-          list-style: none;
-          margin-top: 1.5rem;
-          align-items: center;
-            justify-content: center;
-          li {
-            a {
-              text-decoration: none;
-              color: white; /* Light color for links */
-              font-size: 1.2rem;
-              transition: color 0.3s ease, transform 0.3s ease;
-              @media (max-width: 600px) {
-                font-size: 16px;
-              }
-              &:hover {
-                color: rgb(170, 180, 193); /* Blue on hover */
-              }
-            }
-          }
         }
     }
 }
