--- a/src/app/Bio/Bio.module.scss
+++ b/src/app/Bio/Bio.module.scss
@@ -317,7 +317,6 @@
     }
   } 
 }
-
 .bookRecommendations {
   margin-top: 3rem;
 
@@ -325,9 +324,6 @@
     font-size: 1.8rem;
     color: $primary-blue;
     margin-bottom: 1rem;
-    @media (max-width: 600px) {
-      font-size: 1.5rem;
-}
   }
 
   p {
@@ -338,8 +334,8 @@
 
   .bookGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 2rem;
   }
 
   .bookItem {
@@ -352,17 +348,42 @@
       transform: translateY(-5px);
     }
 
-    .bookImage {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 0.5rem;
+    .bookCover {
+      position: relative;
+      width: 180px; /* Fixed width for book cover */
+      height: 280px; /* Fixed height for book cover */
+      margin: 0 auto;
+      perspective: 1000px; /* Perspective for 3D effect */
+      background-color: #fff;
+      box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+
+      .bookSpine {
+        position: absolute;
+        width: 20px;
+        height: 100%;
+        background: linear-gradient(to right, #d9d9d9, #b3b3b3);
+        left: -20px;
+        top: 0;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        box-shadow: inset -2px 0 5px rgba(0, 0, 0, 0.1);
+      }
+
+      .bookImage {
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        object-fit: cover;
+      }
     }
 
-    p {
+    .bookTitle {
+      margin-top: 1rem;
       font-size: 0.9rem;
-      color: $dark-blue;
       font-weight: 600;
+      color: $dark-blue;
+      line-height: 1.2;
     }
   }
 }
