--- a/src/app/Bio/Bio.module.scss
+++ b/src/app/Bio/Bio.module.scss
@@ -42,7 +42,7 @@
     .section {
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         margin-bottom: 2rem;
         scroll-margin-top: 80px;
         &:nth-child(even) {
@@ -56,13 +56,20 @@
            background-color: rgba(3, 112, 255, 0.9);
            margin-right: 20%;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height:100% !important;
             .profileImage {
                 flex: 1;
                 width: 100%;
-                max-width: 400px;
+                max-width: 500px;
                 border-radius: 4px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
                 padding-left: 2rem;
+                object-fit: contain;
+               // height:1000px !important;
             }
             @media (max-width: 900px) {
                 margin-right: 0;
