--- a/src/app/carousels/Bio/Bio.module.scss
+++ b/src/app/carousels/Bio/Bio.module.scss
@@ -148,20 +148,21 @@
 }
 
 .contactBlock {
-  margin-top: 1.5rem;
-  font-size: 1.2rem;
+  margin-top: 2.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap:1rem;
+  justify-content: center;
   color: $dark-blue;
   text-align: center;
-
-  p {
-    margin: 0.4rem 0;
-  }
-
+  width:100%;
+  font-size: 2rem;
   .phoneLink {
     color: $primary-blue;
     font-weight: 600;
     text-decoration: none;
-
+     
     &:hover {
       color: $hover-blue;
       text-decoration: underline;
@@ -178,35 +179,6 @@
   }
 }
 
-
-      /*.specialtiesGrid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 15px;
-        padding: 20px;
-        background-color: $light-blue;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        list-style: none
-        margin: 0;
-        padding-left: 20px;
-      
-        li {
-          font-size: 1.1rem;
-          color: $dark-blue;
-          text-align: left;
-          padding: 5px 8px;
-          background-color: #ffffff;
-          border-radius: 6px;
-          border: none; 
-          box-shadow: none; 
-          list-style: disc; /
-          margin-left: 20px; 
-          @media (max-width: 600px) {
-            font-size: 1rem;
-          }
-        }
-      }*/
       
       div {
         font-size: 1.5rem;
